HISTORY
=======

History of changes to PHC (name of developer listed in brackets)::

    PloneHelpCenter 4.0b4 (unreleased)

    - Fixed faqfolder_view error by checking if item brain returns a value 
      when asking for getSections
      [ichim-david]

    - Removed ancient patch for CMFCore 1.4.7 or lower, which was last
      used in Plone 2.0.5.
      [maurits]

    - Fix test for knowledge base type not globally addable.
      [ale-rt]

    - Replace rss.gif with rss.png
      [ale-rt]

    - Removed unused to remove dependency from zope.app.publisher.
      [ale-rt]

    - Make ManualPage addable through tempfolder
      [tiberiuichim]

    - Make the knowledge base type not globally addable.
      [davisagli]

    - Make it possible to filter phc_search by getVersions
      [davisagli @ cioppino]

    - Improved styling of portlet_phc_about
      [davisagli, hennaheto @ cioppino]

    PloneHelpCenter 4.0b3 (2011-05-12)

    - Clean up package and release
      [aclark]
    
    - Update discussion_reply.cpy to keep in sync with Plone.
      [davisagli]
    
    - Add subnavigation to most templates.
      [smcmahon]
    
    - Revamp helpcenter_topicview_main to show start-here items,
      topic counts.
      [davisagli]

    - Add getPHCSubNav method for PloneHelpCenter to create subnavigation.
      [stevem]

    - Added metadata.xml file, used by QuickInstaller when upgrading
      [afd]

    PloneHelpCenter 4.0b2 (2010-12-28)

    - Fix phc_stats template in Plone 4.
      [davisagli]

    - Fix import error in Plone 3.
      [miohtama]

    - Use the containment acquisition chain to get the parent
      attributes in ReferenceManualSection type.
      [dukebody]

    - Make listings respect the subtopics order set in the HelpCenter
      or type folders, instead of sorting alphabetically.
      Fixes http://plone.org/products/plonehelpcenter/issues/127.
      [dukebody]

    PloneHelpCenter 4.0b1 (2010-12-09)
