@@ -1,8 +1,5 @@
 <?xml version="1.0"?>
 <metadata>
-
-    <description>Plone Help Center</description>
-    <version>4.0b3</version>
-
-
+  <description>Plone Help Center</description>
+  <version>4.0b4</version>
 </metadata>
