@@ -5,7 +5,7 @@
  <property name="title">How-to Section</property>
  <property
     name="description">A How-to Section can contain how-to documents.</property>
- <property name="content_icon">topic_icon.gif</property>
+ <property name="content_icon">topic_icon.png</property>
  <property name="content_meta_type">HelpCenterHowToFolder</property>
  <property name="product">PloneHelpCenter</property>
  <property name="factory">addHelpCenterHowToFolder</property>
