@@ -3,7 +3,7 @@
    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <property name="title">Link Section</property>
  <property name="description">A simple folderish archetype</property>
- <property name="content_icon">link_icon.gif</property>
+ <property name="content_icon">link_icon.png</property>
  <property name="content_meta_type">HelpCenterLinkFolder</property>
  <property name="product">PloneHelpCenter</property>
  <property name="factory">addHelpCenterLinkFolder</property>
